<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="add_note">Add note</string>
    <string name="app_name">PAF_Notes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete</string>
    <string name="delete_note_label">Are you sure you want to delete it?</string>
    <string name="developer_settings">Developer Settings</string>
    <string name="edit_note">Change</string>
    <string name="edit_note_label">Changed your mind ?</string>
    <string name="environments">Environments</string>
    <string name="env_dev">Dev</string>
    <string name="env_prod">Prod</string>
    <string name="help">Help</string>
    <string name="keep_lists_synced">Lists synced</string>
    <string name="login">Login</string>
    <string name="logout_user">Logout</string>
    <string name="new_group_name">Please name your new shopping list.</string>
    <string name="new_note">New note</string>
    <string name="new_note_name">Write something nice...</string>
    <string name="notes">Notes</string>
    <string name="notification_settings">Notification preferences</string>
    <!-- Send Feedback -->
    <string name="send_feeback">Send Feedback</string>
    <string name="settings">Settings</string>
    <string name="sign_in_user">Sign in</string>
    <string name="switch_environments">Switch environments</string>
    <string name="switch_environments_summary">"Through the developer options you can switch the
        environments
    "</string>
    <string name="sync_settings">Sync preferences</string>
    <string name="title_enable_suggestions">Enable suggestions</string>
    <string name="todo">ToDo</string>
    <string name="user">User</string>
</resources>
