<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="notifications_category"
        app:title="@string/sync_settings">

        <SwitchPreferenceCompat
            app:key="switch_enable_suggestions_preference"
            app:title="@string/title_enable_suggestions" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="sync_category"
        app:title="@string/sync_settings">

        <SwitchPreferenceCompat
            app:defaultValue=""
            app:key="switch_sync_lists_preference"
            app:title="@string/keep_lists_synced" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="help_category"
        app:title="Help">

        <Preference
            app:key="feedback"
            app:summary="Report technical issues or suggest new features"
            app:title="Send feedback" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="developer_settings_category"
        app:title="Developer Settings">

        <ListPreference
            app:dialogTitle="@string/switch_environments"
            app:entries="@array/environment_keys"
            app:entryValues="@array/environment_values"
            app:key="switch_environments_preference"
            app:summary="@string/switch_environments_summary"
            app:title="@string/switch_environments" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>